drawing 1 prototype + navigation page

--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Final Project</title>
 </head>
 <body>
+    <div class="filter"></div>
 
-    <a href="drawing1/index.html">drawing 1</a>
-    <a href="drawing2/index.html">drawing 2</a>
-    <a href="drawing3/index.html">drawing 3</a>
+    <div class="window">
+        <img class="frame" src="media/window.png">
+        <img class="windowsmall" src="media/vintage.png">
+
+        <a class="record" href="drawing1/index.html"> <img src="media/lilac.png"></a>
+        <a class="plane" href="drawing2/index.html"> <img src="media/blue.png"></a>
+        <a class="cactus" href="drawing3/index.html"><img src="media/green.png"></a>
+    </div>
+    
 
 </body>
 </html>
