--- a/drawing1/index.html
+++ b/drawing1/index.html
@@ -4,11 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
-    <title>Drawing 1</title>
+    <title>record player</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <audio autoplay loop src="lofi.mp3"></audio>
+    <audio autoplay loop src="vinyl.mp3"></audio>
 
-    <script src="script.js"></script>
+    <svg class="disk">
+        <use href="sprite.svg#disk-fill"/>
+    </svg>
+    <svg class="shadow">
+        <use href="sprite.svg#shadow"/>
+    </svg>
+    <svg class="outline disk">
+        <use href="sprite.svg#disk-outline"/>
+    </svg>
+    <svg class="tone-arm other">
+        <use href="sprite.svg#other"/>
+    </svg>
+    <svg class="outline tone-arm">
+        <use href="sprite.svg#tone-arm"/>
+    </svg>
+
+    <div class="flower">
+        <svg class="sakura sakura-fill">
+            <use href="sprite.svg#sakura-fill"/>
+        </svg>
+        <svg class="sakura sakura-shadow">
+            <use href="sprite.svg#sakura-shadow"/>
+        </svg>
+        <svg class="sakura sakura-center">
+            <use href="sprite.svg#sakura-center"/>
+        </svg>
+    </div>
+
+    <script>
+        const flower = document.querySelectorAll('.sakura');
+
+        let frameX = 10;
+        let frameY = 0;
+        let dx = 4;
+        let dy = 6;
+        let animation = requestAnimationFrame(move);
+
+        function move(){
+            animation = requestAnimationFrame(move);
+
+            if( (frameX + dx) > window.innerWidth || (frameX + dx) < 0 ){
+                dx = -dx;
+            }
+            if( (frameY + dy) > window.innerHeight|| (frameY + dy) < 0){
+                dy = -dy;
+            }
+
+            frameX += dx;
+            frameY += dy;
+
+            for(i=0; i<=2; i++){
+                flower[i].style.left = frameX + "px";
+                flower[i].style.top = frameY + "px";
+                flower[i].style.transform = "rotate(60deg)" + "scale(2.5)";
+                flower[i].style.transition = "3s ease";
+            }
+        }
+    </script>
 </body>
 </html>
