added javascript to nav page

--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
 </head>
 <body>
     <div class="filter"></div>
+        
+    <div>
+        <audio class="record-audio" loop src="drawing1/lofi.mp3"></audio>
+        <audio class="plane-audio" src="drawing2/flight.mp3"></audio>
+    </div>
 
     <div class="window">
         <img class="frame" src="media/window.png">
         <img class="windowsmall" src="media/vintage.png">
 
-        <a class="record" href="drawing1/index.html"> <img src="media/lilac.png"></a>
-        <a class="plane" href="drawing2/index.html"> <img src="media/blue.png"></a>
+        <a class="record" href="drawing1/index.html"><img src="media/lilac.png"></a>
+        <a class="plane" href="drawing2/index.html"><img src="media/blue.png"></a>
         <a class="cactus" href="drawing3/index.html"><img src="media/green.png"></a>
     </div>
     
-
+    <script src="script.js"></script>
 </body>
 </html>
