--- a/drawing2/index.html
+++ b/drawing2/index.html
@@ -30,8 +30,11 @@
     <span class="block right-block"></span>
     <span class="block bottom-left-block"></span>
     <span class="block bottom-right-block"></span>
-
+    
     <span class = "dark-filter"></span>
+
+    <img class="clouds" src="clouds.gif" alt="clouds glitching">
+    <img class="rain" src="rain.gif" alt="raindrops">
 
     <svg class="window">
         <use href="sprite.svg#window-fill"/>
@@ -42,12 +45,16 @@
     </svg>
 
     <div>
-        <img class="chair" src="chair.png" alt="airplane seat">
-        <img class="chair" src="chair.png" alt="airplane seat">
-        <img class="chair" src="chair.png" alt="airplane seat">
+        <svg class="chair">
+            <use href="sprite.svg#chair"/>
+        </svg>
+        <svg class="chair">
+            <use href="sprite.svg#chair"/>
+        </svg>
+        <svg class="chair">
+            <use href="sprite.svg#chair"/>
+        </svg>
     </div>
-
-    <span class = "clouds"></span>
 
     <span class="hover-indicator"></span>
 
