--- a/drawing2/index.html
+++ b/drawing2/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Drawing 2</title>
+    <title>A Plane Window</title>
 </head>
 <body>
     <audio autoplay loop src="flight.mp3"></audio>
