--- a/drawing1/index.html
+++ b/drawing1/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <audio class="lofi" loop src="lofi.mp3"></audio>
+    <!-- source:https://www.youtube.com/watch?v=Yd3ca5VP6sc 【 1 9 0 0 s - v i b e 】 ~ Classic Lounge Lofi Mix-->    
+
     <audio autoplay loop src="vinyl.mp3"></audio>
+    <!-- source: https://vinylsound.bandcamp.com/track/silent-vinyl-groove-7-inch-33-1-3-rpm-3-46-min -->
 
     <img src="sakura-falling.gif" alt="sakura falling">
+    <!-- source: https://s119.photobucket.com/user/dark_ninja_girl666/media/flowers/cherry%20blossoms/fallingdarkpinkflowerpetalswithblac.gif.html -->
 
     <svg class="disk">
         <use href="sprite.svg#disk-fill"/>
