--- a/drawing2/index.html
+++ b/drawing2/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <audio autoplay loop src="flight.mp3"></audio>
+    <!-- source:https://www.youtube.com/watch?v=RKl6cUnOyAE take flight [lo-fi hip hop / jazzhop / chillhop mix] (Study/Sleep/Relax) 2018-->
 
     <svg class="sky">
         <use href="sprite.svg#sky"/>
@@ -34,7 +35,10 @@
     <span class = "dark-filter"></span>
 
     <img class="clouds" src="clouds.gif" alt="clouds glitching">
+    <!-- source: free cloud animation - clipart library -->
+    
     <img class="rain" src="rain.gif" alt="raindrops">
+    <!-- source: http://i.annihil.us/u/prod/marvel/html_blocks_assets/ironman404/IM-rain.gif -->
 
     <svg class="window">
         <use href="sprite.svg#window-fill"/>
