--- a/drawing3/index.html
+++ b/drawing3/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <audio autoplay loop src="music.mp3"></audio>
+    <!-- (no copyright music) lofi type beat “biscuit” | free vlog music | prod. by lukrembo -->
 
     <span></span>
+    <!-- gif by Amanda Bonaiuto  -->
 
     <svg class="pot pot-fill">
         <use href="sprite.svg#pot-fill"/>
