linked drawing 3 audio

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div>
         <audio class="record-audio" loop src="drawing1/lofi.mp3"></audio>
         <audio class="plane-audio" src="drawing2/flight.mp3"></audio>
+        <audio class="cactus-audio" src="drawing3/music.mp3"></audio>
     </div>
 
     <div class="window">
